iptables
# Generated by iptables-save v1.4.7 on Sat Aug 18 15:58:36 2012
*filter
:INPUT DROP [32:4068]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# loopback
-A INPUT -i lo -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT

# drop private
-A INPUT -s 10.0.0.0/8 -j DROP
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 192.168.0.0/16 -j DROP
# 
-A INPUT -p tcp -m state --state ESTABLISHED,RELATED -j ACCEPT

# ping 
-A INPUT -p icmp --icmp-type echo-request -m limit --limit 1/m --limit-burst 6  -j ACCEPT

# ssh
# -A INPUT -p tcp -m state--syn--state NEW--dport 22 -m limit--limit 1/minute--limit-burst 1 -j ACCEPT
# -A INPUT -p tcp -m state--syn--state NEW--dport 22 -j DROP
# ssh
# 60sec 5count log,drop
# block ssh attacker 
-N SSHAttack
-A SSHAttack -m recent --set --name attacker -j LOG --log-level info --log-prefix 'IPTABLES_INPUT_LOG_SSHAttak:'
-A SSHAttack -j DROP
-A INPUT -p tcp --dport 22 -m state --state NEW -m recent --rcheck --seconds 600 --name attacker -j DROP
-A INPUT -p tcp --dport 22 -m state --state NEW -m recent --set --name SSH
-A INPUT -p tcp --dport 22 -m state --state NEW -m recent --update --seconds 60 --hitcount 5 --rttl --name SSH -j SSHAttack
#
#-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --set --name SSH --rsource 
#-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 60 --hitcount 5 --rttl --name SSH --rsource -j LOG --log-prefix "IPTABLES_INPUT_LOG : " --log-level=info
-A INPUT -p tcp --dport 22 -j ACCEPT

# dns
-A INPUT -p udp --sport 53 -j ACCEPT

# ntp
-A INPUT -p udp --dport 123 -j ACCEPT

# http,https
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# reject
-A INPUT -j REJECT --reject-with icmp-host-prohibited
